{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Gamepad",
            "id": "8eb0229f-1733-481d-9cb0-ebdb91e6109d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1a5f4026-8cc5-45ea-80a1-6bf360ddbbf0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "5a7cbacf-7b12-4629-a1c2-218cb647405f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "e93d8ba2-fbf5-49d7-8838-041cf095bb28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50570a93-f58a-4ebc-8810-80cdca4181c2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6823e47a-c9ba-47ff-9b5e-cb7335493316",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91f7fc09-577a-4fc4-8de9-0e9f9049d1e8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30e08102-5f23-4d32-9b08-4bbae0f5eb8d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}